--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -90,10 +90,10 @@ layout: default
               <i class="fab fa-facebook fa-lg"></i>
             </a>
           
-            <button class="copy-link-btn" aria-label="Copy page link" onclick="bmCopyLink()">
-               <i class="fas fa-link fa-lg"></i>
+            <button class="bm-copy copy-link-btn" aria-label="Copy page link" onclick="bmCopyLink()">
+              <i class="fas fa-link fa-lg"></i>
             </button>
-            <span id="sb-copied" class="bm-copied" aria-hidden="true">Copied!</span>
+            <span class="bm-copied" aria-hidden="true">Copied!</span>
           </div>
         </aside>    
         {{ content }}
