Change the copied color.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -427,7 +427,7 @@ search: false
 .bm-copied {
   opacity:0;
   font-size:.8rem;
-  color:#28a745;
+  color:#c10814;
   margin-left:.4rem;
   transition:opacity .2s ease;
 }
