Trying to Fix copy buttons

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -90,7 +90,7 @@ layout: default
               <i class="fab fa-facebook fa-lg"></i>
             </a>
           
-            <button class="bm-copy copy-link-btn" aria-label="Copy page link" onclick="bmCopyLink()">
+            <button class="copy-link-btn" aria-label="Copy page link" onclick="bmCopyLink()">
               <i class="fas fa-link fa-lg"></i>
             </button>
             <span class="bm-copied" aria-hidden="true">Copied!</span>
