Fixing issues with pop-up.

--- a/_includes/book-modal.html
+++ b/_includes/book-modal.html
@@ -35,8 +35,8 @@
       </div>
   
       <!-- Social share -->
+      <h3 id="bm-title">Share us!</h3><br>
       <div class="bm-share">
-        <h3 id="bm-title">Share our project!</h3>
         {% assign linkedin_text = "Explore this free biological-modeling course!" | url_encode %}
         {% assign x_text       = "Check out this awesome free resource on biological modeling!" | url_encode %}
         {% assign reddit_text  = "Great free website that teaches biological modeling through projects." | url_encode %}
