minor changes to popup

--- a/_includes/book-modal.html
+++ b/_includes/book-modal.html
@@ -12,7 +12,7 @@
            alt="Biological Modeling book cover"
            class="bm-cover">
   
-      <h3 id="bm-title">Enjoying <em>Biological Modeling</em>?</h3>
+      <h2 id="bm-title">Enjoying <em>Biological Modeling</em>?</h2>
   
       <p class="bm-blurb">
         Grab the companion E-book from Leanpub or the print edition from Amazon.
@@ -36,7 +36,7 @@
   
       <!-- Social share -->
       <div class="bm-share">
-        <h3 id="bm-title">Share our project!</h3>
+        <h3 id="bm-title">Share us!</h3>
         {% assign linkedin_text = "Explore this free biological-modeling course!" | url_encode %}
         {% assign x_text       = "Check out this awesome free resource on biological modeling!" | url_encode %}
         {% assign reddit_text  = "Great free website that teaches biological modeling through projects." | url_encode %}
