Making improvements to header.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,13 @@
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
 </script>
 
-<!-- For all browsers -->
+<!-- Load new header font -->
+<link
+  href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap"
+  rel="stylesheet"
+/>
+
+<!-- Main stylesheet and font awesome -->
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css">
 
