Revert "Making improvements to header."
This reverts commit 059e3992a7909ce5860890373218258e3599dd48.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,13 +9,7 @@
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
 </script>
 
-<!-- Load new header font -->
-<link
-  href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap"
-  rel="stylesheet"
-/>
-
-<!-- Main stylesheet and font awesome -->
+<!-- For all browsers -->
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css">
 
